--- a/styles/contextMenu.css
+++ b/styles/contextMenu.css
@@ -1,4 +1,4 @@
-#deskContextMenu,#iconContextMenu {
+#dropContextMenu {
     position: absolute;
 
     width: 220px;
@@ -14,13 +14,13 @@
 
     /*image-rendering: crisp-edges;*/
 }
-.contextMenu{
+.contextSection{
     border: #a1a1a1;
     border-width: 1px;
     border-style: solid;
     border-bottom: 0;
 }
-.contextMenu>div{
+.contextSection>div{
     display: grid;
     grid-template-columns: 18px auto 18px;
     grid-template-rows: 18px;
@@ -28,7 +28,7 @@
 
     user-select: none;
 }
-.contextMenu>div>span{
+.contextSection>div>span{
     font-family: Arial, Helvetica, sans-serif;
     color: #2c2c2c;
     padding-left: 5px;
@@ -36,7 +36,7 @@
 
     cursor: default;
 }
-.contextMenu>div>div{
+.contextSection>div>div{
     background-size: auto;
     background-position: center;
     background-repeat: no-repeat;
@@ -47,6 +47,6 @@
     width: 100%;
     height: 100%;
 }
-.contextMenu>div:hover{
+.contextSection>div:hover{
     background-color: #9ecbdf;
 }
